Updated README; added logger option

--- a/configs/global.json.example
+++ b/configs/global.json.example
@@ -10,5 +10,8 @@
         "ENABLED": true,
         "HOST": "127.0.0.1",
         "PORT": 6600
+    },
+    "MISC": {
+        "LOG": true
     }
 }
