--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-Beaker==1.5.4
-Brlapi==0.6.0
-Mako==1.0.0
-MarkupSafe==0.18
-pygobject==3.10.2
 python-mpd2==0.5.3
 requests==2.4.3
 BeautifulSoup==4.3.2
+watchdog==0.8.2
