--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -40,6 +40,7 @@ jiyuubot_VALAFLAGS = \
 	--pkg gio-2.0 \
 	--pkg gee-0.8 \
 	--pkg libsoup-2.4 \
+	--pkg libxml-2.0 \
 	--pkg posix \
 	--pkg purple \
 	--pkg purple-amend \
