--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ gschemas.compiled
 .*.sw*
 /.dirstamp
 /src/*.stamp*
+/plugins/*.stamp*
 /src/jiyuubot
 /src/*jiyuubot-api*
 /GPATH
@@ -53,10 +54,15 @@ Makefile.in
 /tags
 /m4
 /src/*.c
-/src*.la*
-/src*_la*
+/plugins/*.c
+/src/*.la*
+/src/*_la*
 /src/*.lo
+/plugins/*.la*
+/plugins/*_la*
+/plugins/*.lo
 /src/.libs
+/plugins/.libs
 /src/*.gir
 /src/*.typelib
 /config/purple.ini
