--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -39,6 +39,7 @@ jiyuubot_SOURCES = \
 jiyuubot_VALAFLAGS = \
 	--pkg gio-2.0 \
 	--pkg gee-0.8 \
+	--pkg gmodule-2.0 \
 	--pkg libsoup-2.4 \
 	--pkg libxml-2.0 \
 	--pkg posix \
@@ -56,6 +57,7 @@ jiyuubot_CFLAGS = \
 	-DGITREV=\"$(GIT_REV)\" \
 	-I. \
 	-I$(top_srcdir)/vapi \
+	-fPIC \
 	$(jiyuubot_U_CFLAGS)
 
 jiyuubot_LDADD = \
