Port isitup to Vala

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1,7 +1,8 @@
 noinst_libdir = $(abs_builddir)
 
 noinst_lib_LTLIBRARIES = \
-	bots.la
+	bots.la \
+	isitup.la
 
 
 base_CFLAGS = \
@@ -29,3 +30,12 @@ bots_la_CFLAGS = $(base_CFLAGS)
 bots_la_VALAFLAGS = $(base_VALAFLAGS)
 bots_la_LIBADD = $(base_LIBADD)
 bots_la_LDFLAGS = $(base_LDFLAGS)
+
+isitup_la_SOURCES = isitup.vala
+isitup_la_CFLAGS = $(base_CFLAGS)
+isitup_la_VALAFLAGS = \
+	--pkg libsoup-2.4 \
+	--pkg json-glib-1.0 \
+	$(base_VALAFLAGS)
+isitup_la_LIBADD = $(base_LIBADD)
+isitup_la_LDFLAGS = $(base_LDFLAGS)
