--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,6 +13,7 @@ libjiyuubot_api_la_VALAFLAGS = \
 	--pkg gio-2.0 \
 	--pkg gee-0.8 \
 	--pkg libsoup-2.4 \
+	--pkg libxml-2.0 \
 	--pkg purple \
 	--pkg constants \
 	--thread \
