--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -15,6 +15,7 @@ base_VALAFLAGS = \
 	--pkg gio-2.0 \
 	--pkg gee-0.8 \
 	--pkg libsoup-2.4 \
+	--pkg libxml-2.0 \
 	--pkg purple \
 	--pkg jiyuubot-api \
 	--vapidir $(top_srcdir)/vapi \
