Skeletal jiyuubot implementation
Simple implementation of the jiyuubot utility. All that's really
contained in this commit is some command-line options:

* --config: specify a path to a config file
* --list-protocols: lists all the available protocols supported by
  activatable Telepathy connection managers
* --version: show lib/daemon version

--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,9 @@ Makefile.in
 .libs/
 
 /docs/
+src/jiyuubot/jiyuubot
 **/tests/*
 !**/tests/*.vala
 !**/tests/Makefile.am
+src/jiyuubot/tests/jiyuubot.vala
 *.conf
