--- a/src/jiyuubot/Makefile.am
+++ b/src/jiyuubot/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = tests
 
-bin_PROGRAMS = jiyuubot
+bin_PROGRAMS = jiyuubot jiyuubot-launcher
 
 jiyuubot_SOURCES = \
 	$(top_srcdir)/src/libjiyuubot/jiyuubot.vapi \
@@ -14,8 +14,21 @@ jiyuubot_LDADD = \
 	$(top_srcdir)/src/libjiyuubot/libjiyuubot.la \
 	$(jiyuubot_U_LIBS)
 
+jiyuubot_launcher_SOURCES = \
+	$(top_srcdir)/src/libjiyuubot/jiyuubot.vapi \
+	jiyuubot-launcher.vala
+jiyuubot_launcher_VALAFLAGS = \
+	$(jiyuubot_U_VALAFLAGS)
+jiyuubot_launcher_CFLAGS = \
+	-I$(top_srcdir)/src/libjiyuubot \
+	$(jiyuubot_U_CFLAGS)
+jiyuubot_launcher_LDADD = \
+	$(top_srcdir)/src/libjiyuubot/libjiyuubot.la \
+	$(jiyuubot_U_LIBS)
+
 CLEANFILES = \
 	$(jiyuubot_SOURCES:%.vala=%.c) \
+	$(jiyuubot_launcher_SOURCES:%.vala=%.c) \
 	*.stamp \
 	*.stamp-t
 
