Split account management into new source file
Since manipulation of Telepathy accounts form a discrete group of
functionality separate from the daemon itself, this commit moves it into
a new file.

--- a/src/jiyuubot/Makefile.am
+++ b/src/jiyuubot/Makefile.am
@@ -4,6 +4,7 @@ bin_PROGRAMS = jiyuubot jiyuubot-launcher
 
 jiyuubot_SOURCES = \
 	$(top_srcdir)/src/libjiyuubot/jiyuubot.vapi \
+	accounts.vala \
 	jiyuubot.vala
 jiyuubot_VALAFLAGS = \
 	$(jiyuubot_U_VALAFLAGS)
