--- a/src/jiyuubot/Makefile.am
+++ b/src/jiyuubot/Makefile.am
@@ -3,28 +3,34 @@ SUBDIRS = tests
 bin_PROGRAMS = jiyuubot jiyuubot-launcher
 
 jiyuubot_SOURCES = \
+	$(top_srcdir)/src/libtp/tp.vapi \
 	$(top_srcdir)/src/libjiyuubot/jiyuubot.vapi \
 	accounts.vala \
 	jiyuubot.vala
 jiyuubot_VALAFLAGS = \
 	$(jiyuubot_U_VALAFLAGS)
 jiyuubot_CFLAGS = \
+	-I$(top_srcdir)/src/libtp \
 	-I$(top_srcdir)/src/libjiyuubot \
 	$(jiyuubot_U_CFLAGS)
 jiyuubot_LDADD = \
+	$(top_srcdir)/src/libtp/libtp.la \
 	$(top_srcdir)/src/libjiyuubot/libjiyuubot.la \
 	$(jiyuubot_U_LIBS)
 
 jiyuubot_launcher_SOURCES = \
+	$(top_srcdir)/src/libtp/tp.vapi \
 	$(top_srcdir)/src/libjiyuubot/jiyuubot.vapi \
 	jiyuubot-launcher.vala
 jiyuubot_launcher_VALAFLAGS = \
 	$(jiyuubot_U_VALAFLAGS)
 jiyuubot_launcher_CFLAGS = \
 	-DDATADIR=\"$(datadir)\" \
+	-I$(top_srcdir)/src/libtp \
 	-I$(top_srcdir)/src/libjiyuubot \
 	$(jiyuubot_U_CFLAGS)
 jiyuubot_launcher_LDADD = \
+	$(top_srcdir)/src/libtp/libtp.la \
 	$(top_srcdir)/src/libjiyuubot/libjiyuubot.la \
 	$(jiyuubot_U_LIBS)
 
