Implement stub channel handler
This commit adds the first Telepathy client code to libtp and JiyuuBot.
All it does at the moment is print out channel paths (and implicitly
handles them in the process).

--- a/src/jiyuubot/Makefile.am
+++ b/src/jiyuubot/Makefile.am
@@ -6,6 +6,7 @@ jiyuubot_SOURCES = \
 	$(top_srcdir)/src/libtp/tp.vapi \
 	$(top_srcdir)/src/libjiyuubot/jiyuubot.vapi \
 	accounts.vala \
+	clients.vala \
 	jiyuubot.vala
 jiyuubot_VALAFLAGS = \
 	$(jiyuubot_U_VALAFLAGS)
