Add GIR namespace attributes
valac's GIR generation falls over if namespaces don't have CCcode
gir_namespace and gir_version set, so this commit adds namespace.vala.in
to libtp and libjiyuubot to fix this.

--- a/src/libjiyuubot/Makefile.am
+++ b/src/libjiyuubot/Makefile.am
@@ -11,25 +11,37 @@ gir_DATA = JiyuuBot-$(SHORT_VERSION).gir
 typelib_DATA = JiyuuBot-$(SHORT_VERSION).typelib
 
 BUILT_SOURCES = \
+	namespace.vala \
 	jiyuubot.h \
 	jiyuubot.pc \
 	jiyuubot.vapi jiyuubot.deps \
 	JiyuuBot-$(SHORT_VERSION).gir JiyuuBot-$(SHORT_VERSION).typelib
 
+namespace.vala: namespace.vala.in
+	$(AM_V_GEN) sed -e "s|[@]SHORT_VERSION[@]|$(SHORT_VERSION)|" $< > $@
+
 jiyuubot.deps:
-	$(AM_V_GEN) printf "gio-2.0\ntp\n" > $@
+	$(AM_V_GEN) printf "tp\n" > $@
 
 JiyuuBot-$(SHORT_VERSION).typelib: JiyuuBot-$(SHORT_VERSION).gir
-	$(AM_V_GEN) g-ir-compiler --shared-library=libjiyuubot --output=$@ $<
+	$(AM_V_GEN) g-ir-compiler --includedir=$(top_srcdir)/src/libtp \
+		--shared-library=libjiyuubot \
+		--output=$@ \
+		$<
 
-libjiyuubot_la_SOURCES = libjiyuubot.vala
+libjiyuubot_la_SOURCES = \
+	$(top_srcdir)/src/libtp/tp.vapi \
+	namespace.vala \
+	libjiyuubot.vala
 libjiyuubot_la_VALAFLAGS = \
 	--library jiyuubot \
 	-H jiyuubot.h \
 	--vapi jiyuubot.vapi \
 	--gir JiyuuBot-$(SHORT_VERSION).gir \
 	$(jiyuubot_U_VALAFLAGS)
-libjiyuubot_la_CFLAGS = $(jiyuubot_U_CFLAGS)
+libjiyuubot_la_CFLAGS = \
+	-I$(top_srcdir)/src/libtp \
+	$(jiyuubot_U_CFLAGS)
 libjiyuubot_la_LIBADD = \
 	$(top_srcdir)/src/libtp/libtp.la \
 	$(jiyuubot_U_LIBS)
