Implement IBIP client
This commit adds a client implementing IBIP[1], since it's a simple test
to implement.

[1]: https://git.teknik.io/Teknikode/IBIP

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,8 @@ Makefile.in
 *.la
 .libs/
 
+*.conf
+
 *.gir
 *.typelib
 *.deps
@@ -71,4 +73,6 @@ src/jiyuubot/jiyuubot-launcher
 !**/tests/Makefile.am
 src/jiyuubot/tests/jiyuubot.vala
 
-*.conf
+src/clients/*
+!src/clients/*.vala
+!src/clients/Makefile.am
