libtp: Add constants test
This commit adds a test to libtp to ensure our interface constants are
the same as those that appear in telepathy-glib. Since this is the first
libtp test, this commit also adds the test harness.

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ src/jiyuubot/jiyuubot-launcher
 
 **/tests/*
 !**/tests/*.vala
+!**/tests/*.vapi
 !**/tests/Makefile.am
 src/jiyuubot/tests/jiyuubot.vala
 
