Add convert client
This commit adds a new client that uses DuckDuckGo's instant-answers API
to convert between units of measurement. A few things had to be changed
to get things working:

 * Added dependency on librest and json-glib libraries
 * Added an in-tree copy of the libsoup vapi, since the one Fedora
   distributes is _still_ broken
 * Fixed a problem in the client Makefile

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,7 +17,9 @@ else
 	return 1
 endif
 
-EXTRA_DIST = autogen.sh
+EXTRA_DIST = \
+	$(wildcard vapi/*) \
+	autogen.sh
 
 clean-local:
 	rm -rf docs
