libjiyuubot: add RegexClient
This commit adds a base client that can be fed a regex to match against
incoming messages.

--- a/src/libjiyuubot/Makefile.am
+++ b/src/libjiyuubot/Makefile.am
@@ -34,6 +34,7 @@ libjiyuubot_la_SOURCES = \
 	client-app.vala \
 	client-list.vala \
 	clients/command-client.vala \
+	clients/regex-client.vala \
 	clients/tp-client.vala \
 	messages.vala \
 	misc.vala \
