libjiyuubot: add ReplyBuilder
Creating responses by simple string concatenation is cumbersome and
error-prone, so this commit adds a ReplyBuilder type to libjiyuubot.
It's similar in concept to GLib's StringBuilder, but handles token
delimiters instead of simply concatenating the input.

--- a/src/libjiyuubot/Makefile.am
+++ b/src/libjiyuubot/Makefile.am
@@ -38,6 +38,7 @@ libjiyuubot_la_SOURCES = \
 	clients/tp-client.vala \
 	messages.vala \
 	misc.vala \
+	reply-builder.vala \
 	namespace.vala
 libjiyuubot_la_VALAFLAGS = \
 	--library jiyuubot \
