libjweather: add rudimentary tests
This commit adds some basic sanity tests to libjweather to ensure values
aren't ridiculously wrong.

--- a/configure.ac
+++ b/configure.ac
@@ -81,5 +81,6 @@ AC_CONFIG_FILES([
 
   src/clients/Makefile
   src/clients/libjweather/Makefile
+  src/clients/libjweather/tests/Makefile
 ])
 AC_OUTPUT
